--- a/genindex.html
+++ b/genindex.html
@@ -135,6 +135,7 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -162,9 +163,13 @@
 </li>
       <li><a href="output_multiple_crop.html#output_multiple_crop.chunks">chunks() (in module output_multiple_crop)</a>
 </li>
+      <li><a href="conv_crop.html#module-conv_crop">conv_crop (module)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="conv_crop.html#module-conv_crop">conv_crop (module)</a>
+      <li><a href="functions.html#functions.conv_squares">conv_squares() (in module functions)</a>
+</li>
+      <li><a href="functions.html#functions.conv_stride">conv_stride() (in module functions)</a>
 </li>
       <li><a href="crops.html#module-crops">crops (module)</a>
 </li>
@@ -200,6 +205,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="area_extractor.html#area_extractor.get_blue_region">get_blue_region() (in module area_extractor)</a>
 </li>
+      <li><a href="functions.html#functions.get_data_tensor">get_data_tensor() (in module functions)</a>
+</li>
       <li><a href="area_extractor.html#area_extractor.get_regions">get_regions() (in module area_extractor)</a>
 </li>
       <li><a href="output_multiple_crop.html#output_multiple_crop.get_tiles">get_tiles() (in module output_multiple_crop)</a>
@@ -211,6 +218,16 @@
       <li><a href="functions.html#functions.guided_backprop_cam">guided_backprop_cam() (in module functions)</a>
 </li>
       <li><a href="functions.html#functions.guided_backprop_image">guided_backprop_image() (in module functions)</a>
+</li>
+      <li><a href="functions.html#functions.guided_cam_evolution">guided_cam_evolution() (in module functions)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="functions.html#functions.img_to_tensor">img_to_tensor() (in module functions)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -246,10 +263,12 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="output_multiple_crop.html#module-output_multiple_crop">output_multiple_crop (module)</a>
+      <li><a href="functions.html#functions.onehot_to_label">onehot_to_label() (in module functions)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="output_multiple_crop.html#module-output_multiple_crop">output_multiple_crop (module)</a>
+</li>
       <li><a href="output_multiple_crop.html#output_multiple_crop.output_to_colors">output_to_colors() (in module output_multiple_crop)</a>
 </li>
   </ul></td>
